# atools

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  atools.pptx  configure  configure.ac  mkdocs.yml  requirements.txt
conf/: .gitignore  Makefile.am  Makefile.in  atools.conf  atools.conf.m4  breniac_python.sh  local_python.sh  thinking_python.sh
docs/: .gitignore  acreate.md  aenv.md  aload.md  alog.md  arange.md  areduce.md  changes.md  config.md  contact.md  faq.md  index.md  install.md  job_arrays.md
examples/: .gitignore  Makefile  atools.pbs  cleanup.sh  data_one_column.csv  data_test.csv  one_column.slurm  simple.pbs  single_column_data.csv  standard.pbs  submit.sh  submit_pbs.sh  submit_slurm.sh  sum.c  test.pbs  test.slurm
lib/: Makefile.am  Makefile.in  acreate.py  aenv.py  aload.py  alog.py  arange.py  areduce.py
lib/vsc/: Makefile.am  Makefile.in  shell.py
lib/vsc/atools/: Makefile.am  Makefile.in  config.py  int_ranges.py  log_parser.py  utils.py  work_analysis.py
reduce/: Makefile.am  Makefile.in  empty_body  empty_csv  empty_csv.sh  reduce_body  reduce_body.py  reduce_csv  reduce_csv.sh  reduce_text  reduce_text.sh
scripts/: aenv.py  aload.py  alog.py  arange.py  areduce.py
test/: .gitignore  analyzer_test.py  cleanup.sh  config_test.py  int_ranges_test.py  log_parser_test.py  run_tests.sh  shell_test.py  test.pbs  work_analyzer_test.py
test/data/: atools_torque.conf  data.csv  out-1.txt  out-2.txt  out-3.txt
tmpls/: Makefile.am  Makefile.in  job_script.tmpl
